add Tiles to project

--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -2,3 +2,9 @@ label_contact_list=Лист контактов
 label_contact_first_name=Имя
 label_contact_last_name=Фамилия
 label_contact_birth_date=Год рождения
+home_text=Домой
+label_en_US=en
+label_zh_HK=ru
+header_text=привет, Стас
+menu_header_text=меню
+menu_add_contact=Добавить контакт
