--- a/src/main/webapp/WEB-INF/i18n/application_en_US.properties
+++ b/src/main/webapp/WEB-INF/i18n/application_en_US.properties
@@ -2,3 +2,9 @@ label_contact_list=Contact list
 label_contact_first_name=First name
 label_contact_last_name=Last name
 label_contact_birth_date=Birth date
+home_text=home
+label_en_US=en
+label_zh_HK=ru
+header_text=hello, Stas
+menu_header_text=menu
+menu_add_contact=add contact
