fix JSPX problem

--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -8,3 +8,7 @@ label_zh_HK=ru
 header_text=привет, Стас
 menu_header_text=меню
 menu_add_contact=Добавить контакт
+label_contact_info=info
+label_contact_description=description
+label_contact_update=update
+date_format_pattern=yyyy-MM-dd
