--- a/src/main/webapp/WEB-INF/i18n/application_en_US.properties
+++ b/src/main/webapp/WEB-INF/i18n/application_en_US.properties
@@ -8,3 +8,7 @@ label_zh_HK=ru
 header_text=hello, Stas
 menu_header_text=menu
 menu_add_contact=add contact
+label_contact_info=info
+label_contact_description=description
+label_contact_update=update
+date_format_pattern=yyyy-MM-dd
