add edit contact functional

--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -12,3 +12,9 @@ label_contact_info=info
 label_contact_description=description
 label_contact_update=update
 date_format_pattern=yyyy-MM-dd
+contact_save_fault=fault ;(
+contact_save_success=success :)
+label_contact_new=new
+label_contact_photo=photo
+
+
