add create contact functional

--- a/src/main/webapp/WEB-INF/i18n/application_en_US.properties
+++ b/src/main/webapp/WEB-INF/i18n/application_en_US.properties
@@ -16,3 +16,4 @@ contact_save_fault=fault ;(
 contact_save_success=success :)
 label_contact_new=new
 label_contact_photo=photo
+contact_save_fail=fail ;(
