--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -17,5 +17,8 @@ contact_save_success=success :)
 label_contact_new=new
 label_contact_photo=photo
 contact_save_fail=fail ;(
-
+validation.lastname.NotEmpty.message=empty last name
+validation.lastname.Size.message = incorrect size of last name
+validation.firstname.NotEmpty.message=empty first name
+validation.firstname.Size.message=incorrect size of first name
 
