--- a/src/main/webapp/WEB-INF/i18n/application_en_US.properties
+++ b/src/main/webapp/WEB-INF/i18n/application_en_US.properties
@@ -21,3 +21,5 @@ validation.lastname.NotEmpty.message=empty last name
 validation.lastname.Size.message = incorrect size of last name
 validation.firstname.NotEmpty.message=empty first name
 validation.firstname.Size.message=incorrect size of first name
+label_logout=exit
+label_welcome=welcome
